ikon ve isim belirlendi

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Bulut</string>
+    <string name="app_name">Mertagram</string>
     <string name="title_home">Bildirimler</string>
     <string name="title_dashboard">Akış</string>
     <string name="title_notifications">Hesabım</string>
